css/80_app.css
/* ... */
@media (hover: hover) {
    .notice .zoom-to:hover {
        background: rgba(0,0,0,0.6);
    }
}

.notice .zoom-to .icon {
    width: 30px;
    height: 30px;
    vertical-align: middle;
    margin-right: 10px;
}
.ideditor[dir='rtl'] .notice .zoom-to .icon {
    margin-left: 10px;
    margin-right: 0;
}


/* Tooltips
------------------------------------------------------- */
.popover {
    position: absolute;
    display: none;
}
.tooltip {
    color: #333;
    font-size: 12px;
    white-space: initial;
}
.tooltip:not(.curtain-tooltip) {
    pointer-events: none;
}
.popover.in {
    z-index: 5000;
    height: auto;
    display: block;
}
.tooltip.in {
    opacity: 0.95;
}
.popover.top {
    margin-top: -4px;
}
.popover.right {
    margin-left: 4px;
}
.popover.bottom {
    margin-top: 4px;
}
.popover.left {
    margin-left: -4px;
}
.popover.arrowed.top {
    margin-top: -10px;
}
.popover.arrowed.right {
    margin-left: 10px;
}
.popover.arrowed.bottom {
    margin-top: 10px;
}
.popover.arrowed.left {
    margin-left: -10px;
}
.bar-button .tooltip.arrowed.bottom {
    margin-top: 20px;
}
.tooltip.top {
    text-align: center;
}
.tooltip.right {
    text-align: left;
}
.tooltip.bottom {
    text-align: center;
}
.tooltip.left {
    text-align: right;
}

.popover-inner {
    border-radius: inherit;
}

.tooltip .popover-inner {
    border-radius: 4px;
    max-width: 200px;
    min-width: 80px;
    padding: 10px;
    font-weight: normal;
    background-color: #fff;
}

.popover-arrow {
    position: absolute;
    width: 0;
    height: 0;
    border-color: transparent;
    border-style: solid;
}
.popover.top .popover-arrow {
    bottom: -5px;
    left: 50%;
    margin-left: -5px;
    border-top-color: #fff;
    border-width: 5px 5px 0;
}
.popover.right .popover-arrow {
    top: 50%;
    left: -5px;
    margin-top: -5px;
    border-right-color: #fff;
    border-width: 5px 5px 5px 0;
}
.popover.left .popover-arrow {
    top: 50%;
    right: -5px;
    margin-top: -5px;
    border-left-color: #fff;
    border-width: 5px 0 5px 5px;
}
.popover.bottom .popover-arrow {
    top: -5px;
    left: 50%;
    margin-left: -5px;
    border-bottom-color: #fff;
    border-width: 0 5px 5px;
}
.popover:not(.arrowed) .popover-arrow {
    display: none;
}

.tooltip-heading {
    font-weight: bold;
    background: #f6f6f6;
    padding: 10px;
    margin: -10px -10px 10px -10px;
    border-radius: 3px 3px 0 0;
    font-size: 14px;
}

.keyhint-wrap {
    background: #f6f6f6;
    padding: 10px;
    margin: 10px -10px -10px -10px;
    border-radius: 0 0 3px 3px;
}
.popover-inner .shortcut {
    font-weight: bold;
    margin-left: 5px;
}

.ideditor[dir='rtl'] .popover-inner .shortcut {
    margin-left: 0;
    margin-right: 5px;
}

/* dark tooltips for sidebar / panels */
.tooltip.dark.top .popover-arrow,
.map-pane .tooltip.top .popover-arrow,
.sidebar .tooltip.top .popover-arrow,
.modal .tooltip.top .popover-arrow {
    border-top-color: #000;
}
.tooltip.dark.bottom .popover-arrow,
.map-pane .tooltip.bottom .popover-arrow,
.sidebar .tooltip.bottom .popover-arrow,
.modal .tooltip.bottom .popover-arrow {
    border-bottom-color: #000;
}
.tooltip.dark.left .popover-arrow,
.map-pane .tooltip.left .popover-arrow,
.sidebar .tooltip.left .popover-arrow,
.modal .tooltip.left .popover-arrow {
    border-left-color: #000;
}
.tooltip.dark.right .popover-arrow,
.map-pane .tooltip.right .popover-arrow,
.sidebar .tooltip.right .popover-arrow,
.modal .tooltip.right .popover-arrow {
    border-right-color: #000;
}
.tooltip.dark .popover-inner,
.tooltip.dark .tooltip-heading,
.tooltip.dark .keyhint-wrap,
.map-pane .popover-inner,
.map-pane .tooltip-heading,
.map-pane .keyhint-wrap,
.sidebar .popover-inner,
.sidebar .tooltip-heading,
.sidebar .keyhint-wrap,
.modal .popover-inner {
    background: #000;
    color: #ccc;
}
.tooltip.dark kbd,
.map-pane .tooltip kbd,
.sidebar .tooltip kbd {
    background-color: #666;
    border: solid 1px #444;
    border-bottom-color: #333;
    box-shadow: inset 0 -1px 0 #333;
    color: #eee;
}

/* Exceptions for tooltip layouts */

/* commit warning tooltips need to be closer */
.warning-section .tooltip.top {
    margin-top: -5px;
}

li:first-of-type .badge .tooltip,
li.hide + li.version .badge .tooltip {
    left: auto !important;
    right: 5px !important;
}
.ideditor[dir='rtl'] li:first-of-type .badge .tooltip,
.ideditor[dir='rtl'] li.hide + li.version .badge .tooltip {
    left: 5px !important;
    right: auto !important;
}
li:first-of-type .badge .tooltip .popover-arrow,
li.hide + li.version .badge .tooltip .popover-arrow {
    right: 15px !important;
    left: auto !important;
}
.ideditor[dir='rtl'] li:first-of-type .badge .tooltip .popover-arrow,
.ideditor[dir='rtl'] li.hide + li.version .badge .tooltip .popover-arrow {
    left: 15px !important;
    right: auto !important;
}


/* Contextual Edit Menu
------------------------------------------------------- */
.edit-menu {
    position: absolute;
    display: flex;
    flex-direction: column;
    background: #fff;
    border-radius: 4px;
    /* padding is set in edit_menu.js */
}

.edit-menu .tooltip {
    width: 200px; /* see also edit_menu.js */
}

.edit-menu-item {
    display: flex;
    align-items: center;
    border-radius: 0;
    padding: 0 12px;
    /* height is set in edit_menu.js */
}
.edit-menu-item .label {
    max-width: 120px;
    text-align: initial;
    line-height: 1.1em;
    font-weight: bold;
}
.ideditor[dir='ltr'] .edit-menu-item .label {
    margin-left: 8px;
}
.ideditor[dir='rtl'] .edit-menu-item .label {
    margin-right: 8px;
}

.edit-menu-item use {
    pointer-events: none;
}

/* Lasso
------------------------------------------------------- */
.lasso-path {
    fill-opacity: 0.3;
    stroke: #fff;
    stroke-width: 1;
    stroke-opacity: 1;
    stroke-dasharray: 5, 5;
}
/* ... */

